<?xml version="1.0"?>
<package format="2">
    <name>plugin_panel</name>

    <version>1.0.0</version>

    <description>
        An additional panel in RViz.
    </description>

    <maintainer email="none@none.none">Ashis</maintainer>

    <license>BSD</license>

    <buildtool_depend>catkin</buildtool_depend>

    <build_depend>rviz</build_depend>

    <exec_depend>rviz</exec_depend>

    <export>
        <rviz plugin="${prefix}/plugin_description.xml"/>
    </export>
</package>